--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
   "dependencies": {
     "ccxt": "^1.49.47",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "nodemon": "^2.0.7",
-    "pg": "^8.6.0"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pg": "^8.6.0",
+    "session-file-store": "^1.5.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "nodemon --inspect index.js",
