--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "nodemon",
+    "start": "nodemon --inspect index.js",
     "debug": "nodemon --inspect index.js"
   }
 }
