--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "ccxt": "^1.49.47",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
     "session-file-store": "^1.5.0",
     "uuid": "^8.3.2"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "sessions/*.json"
+    ]
   },
   "scripts": {
     "start": "nodemon --inspect index.js",
