--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
     "session-file-store": "^1.5.0",
+    "typescript": "^4.3.2",
     "uuid": "^8.3.2"
   },
   "nodemonConfig": {
