--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "typescript": "^4.3.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zustand": "^3.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
