--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pg": "^8.6.0",
     "session-file-store": "^1.5.0",
     "typescript": "^4.3.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "pubsub-js": "1.9.4"
   },
   "nodemonConfig": {
     "ignore": [
