--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "ccxt": "^1.49.47",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "mocha": "^9.1.3",
     "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
+    "pubsub-js": "1.9.4",
     "session-file-store": "^1.5.0",
     "typescript": "^4.3.2",
-    "uuid": "^8.3.2",
-    "pubsub-js": "1.9.4"
+    "uuid": "^8.3.2"
   },
   "nodemonConfig": {
     "ignore": [
